# OpenBT

./: .Rhistory  .gitignore  LICENSE  MANIFEST.in  Makefile  Makefile.am  Makefile.in  README.md  ambrt.cpp  amxbrt.cpp  amxbrt.h  brt.cpp  brt.h  brtfuns.cpp  brtfuns.h  builddist.py  cli.cpp  config.status  configure  dinfo.h  eft_fit.py  example.R  example_model_mixing.R  f.txt  fit_amxb1.txt  fit_amxb_k1.txt  fit_amxb_k2.txt  fit_amxb_k2_mn5.txt  fit_mxb1_sig.txt  fit_mxbrt_k1.txt  fit_mxbrt_k2.txt  fit_mxbrt_k2_mn5.txt  fits.txt  ftest.txt  libtool  mbrt.cpp  mcbrt.cpp  mcbrt.h  meson.build  meson.options  (+46 more)
.deps/: mxbrt.Plo  pred.Po
.github/workflows/: build_wheels.yml  install_meson.sh  measure_coverage.yml  setup_base_python.sh  test-pypkg.yml  test_CLTs.yml  test_anaconda.yml  test_coverage.yml  test_py_devmode.yml  test_py_sdist.yml
.libs/: libambrt.la  libambrt.so.0  libambrt.so.0.0.0  libamxbrt.la  libamxbrt.so.0.0.0  libbrt.la  libbrt.so.0  libbrt.so.0.0.0  libcrn.la  libcrn.so.0  libcrn.so.0.0.0  libmbrt.la  libmbrt.so.0.0.0  libmxbrt.la  libpsbrt.la  libpsbrt.so.0.0.0  libsbrt.la  libsbrt.so.0  libsbrt.so.0.0.0  libsinglebinomial.la  libsinglebinomial.so.0.0.0  libsinglepoisson.la  libsinglepoisson.so.0  libsinglepoisson.so.0.0.0  libtree.la  libtree.so.0.0.0  openbtcli  openbtmixingwts  openbtmopareto  openbtpred  openbtsobol  openbtvartivity
Examples/: BART-Model-Mixing-Priors.md  BART_BMM_Technometrics.ipynb  EFT-Model-Mixing-Using-BART.md
Examples/Data/: honda_x_test.txt  honda_x_train.txt  honda_y_train.txt
Python/: eft_models.py
R/: calibration_priors.R  eft_examples.R  eft_mixing_helper_functions.R  honda_eft.R  mixing_priors.R  orthogonal_models.R  polynomials.R
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
includes/: brt.h
misc/: eft_fit.py
openbtmixing/: __init__.py  constants.py  interface_helpers.py  mpirun.py  openbtmixing.py
openbtmixing/.libs/: libambrt.so.0.0.0  libamxbrt.so.0.0.0  libbrt.so.0.0.0  libcrn.so.0.0.0  libmbrt.so.0  libmbrt.so.0.0.0  libmxbrt.so.0  libpsbrt.so.0  libpsbrt.so.0.0.0  libsbrt.so.0.0.0  libsinglebinomial.so.0  libsinglebinomial.so.0.0.0  libsinglepoisson.so.0.0.0  libtree.so.0.0.0
openbtmixing/test/: test_mixing.py
openbtmixing_pypkg/: .coveragerc  .flake8  MANIFEST.in  pyproject.toml  setup.py  tox.ini
openbtmixing_pypkg/cpp/: meson.build  meson.options
openbtmixing_pypkg/src/openbtmixing/: __init__.py  interface_helpers.py  openbtmixing.py  openbtrpath.py  test.py
openbtmixing_pypkg/src/openbtmixing/tests/: polynomial_models.py  test_mixing.py
src/: Makefile.am  Makefile.in  Rpath_polynomial_resultspwtrig3_results4_12_12_23.rds  amcbrt.cpp  amcbrt.h  amxbrt.cpp  amxbrt.h  brt.cpp  brt.h  brtfuns.cpp  brtfuns.h  brtmoves.cpp  calibrate.cpp  calibratefuns.cpp  calibratepred.cpp  cli.cpp  configure  configure.ac  eft_fit.py  mbrt.cpp  mcbrt.cpp  mcbrt.h  mixandemulate.cpp  mixandemulatepred.cpp  mixing.cpp  mixingpredts.cpp  mixingts.cpp  mixingwts.cpp  mxbrt.cpp  mxbrt.h  openbt.R  openbt.py  openbt_build.R  openbt_calibrate.R  openbt_mixing.R  openbt_test.py  parameters.cpp  parameters.h  pred.cpp  test_eigen.cpp  (+6 more)
src/R/: eft_examples.R
subprojects/: README.md
tools/: build_macos_wheel.sh  build_openbt.sh  build_openbt_clt.sh  build_openbt_wheel.sh  check_flake8_compliance.sh  check_python_code.sh  test_python_installation.py
wheelhouse/: README.txt
