[project]
name = "openbtmixing"
version = "1.0.1"
authors = [
  { name="John Yannotty", email="yannotty.1@buckeyemail.osu.edu" },
]
description = "A python packge for model mixing using Bayesian Additive Regression Trees"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

